--- a/.github/workflows/windows-x86_64-python-test.yaml
+++ b/.github/workflows/windows-x86_64-python-test.yaml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         OS: ["windows-2022"]
@@ -14,7 +13,7 @@ jobs:
         - ENVIRONMENT: MINGW64
           CC: clang
       fail-fast: false
-
+    runs-on: ${{ matrix.OS }}
     steps:
     - uses: actions/checkout@v4
 
