Add Makefile and README.md in .github/workflows

--- a/.github/workflows/Makefile
+++ b/.github/workflows/Makefile
@@ -1,3 +1,22 @@
 SHELL := bash
 
+YS-VERSION := 0.1.96
+GIT-PREFIX := ../../.git/.local
+GIT-BIN := $(GIT-PREFIX)/bin
+YS := $(GIT-BIN)/ys-$(YS-VERSION)
 
+YAML-FILES := $(wildcard .*.yaml)
+
+
+default:
+	@echo $(YAML-FILES)
+
+update: $(YS) $(YAML-FILES)
+
+.%.yaml: %.ys
+	$(YS) -Y $< > $@
+
+$(YS):
+	@echo "Installing ys as '$(YS)'"
+	curl -s https://yamlscript.org/install | \
+	  QUIET=1 BIN=1 VERSION=$(YS-VERSION) PREFIX=$(GIT-PREFIX) bash
