--- a/.github/workflows/.macos-python-test.yaml
+++ b/.github/workflows/.macos-python-test.yaml
@@ -1,34 +1,33 @@
 name: MacOS Python build and test
-
-on: [push]
-
+'on':
+- push
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        OS: ["macos-14"]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        OS:
+        - macos-14
+        python-version:
+        - '3.9'
+        - '3.10'
+        - '3.11'
+        - '3.12'
       fail-fast: false
-
     steps:
     - uses: actions/checkout@v4
-
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version:  ${{ matrix.python-version }}
-
+        python-version: ${{ matrix.python-version }}
     - name: Gather runtime environment
       shell: bash
       run: |
-       python -V
-       bash --version
-
+        python -V
+        bash --version
     - name: Install dependencies
       shell: bash
       run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist
-
     - name: Build wheel
       shell: bash
       run: |
@@ -36,7 +35,6 @@ jobs:
         export MAKE=make
         cd src && python -m build
         pip install --force-reinstall dist/highctidh-*.whl
-
     - name: Test with pytest
       shell: bash
       run: |
