--- a/.github/workflows/.docker-alpine-32bit-multi-arch.yaml
+++ b/.github/workflows/.docker-alpine-32bit-multi-arch.yaml
@@ -1,36 +1,35 @@
 name: Alpine multi-arch docker 32bit build and test (clang)
-on:
-  push:
+'on':
+  push: null
   pull_request:
-    branches: [ "main" ]
+    branches:
+    - main
 jobs:
   multiarch:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang"]
-        PORTABLE: ["1"]
-        CONTAINER: ["alpine"]
-        DOCKER_ARCH_ARGS: ["--platform linux/arm/v6 arm32v6/alpine",
-                           "--platform linux/arm/v7 arm32v7/alpine",
-                           "--platform linux/i386 i386/alpine"]
+        CC:
+        - clang
+        PORTABLE:
+        - '1'
+        CONTAINER:
+        - alpine
+        DOCKER_ARCH_ARGS:
+        - --platform linux/arm/v6 arm32v6/alpine
+        - --platform linux/arm/v7 arm32v7/alpine
+        - --platform linux/i386 i386/alpine
       fail-fast: false
     steps:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-
     - name: checkout
       uses: actions/checkout@v4
-
-   #- name: Install requirements
-   #  run : sudo apt update && sudo apt install -y --no-install-recommends docker.io autoconf automake libtool
-
     - name: check kernel
       run: |
         mount | grep binfmt_misc
         docker info
         uname -a
-
     - name: Run in Docker
       run: |
         docker run \
