--- a/.github/workflows/.docker-alpine-64bit-multi-arch.yaml
+++ b/.github/workflows/.docker-alpine-64bit-multi-arch.yaml
@@ -1,38 +1,37 @@
 name: Alpine multi-arch docker 64bit build and test (clang)
-on:
-  push:
+'on':
+  push: null
   pull_request:
-    branches: [ "main" ]
+    branches:
+    - main
 jobs:
   multiarch:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang"]
-        PORTABLE: ["1"]
-        CONTAINER: ["alpine"]
-        DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/alpine",
-                      "--platform linux/amd64 amd64/alpine",
-                      "--platform linux/riscv64 riscv64/alpine:edge",
-                      "--platform linux/ppc64le ppc64le/alpine",
-                      "--platform linux/s390x s390x/alpine"]
+        CC:
+        - clang
+        PORTABLE:
+        - '1'
+        CONTAINER:
+        - alpine
+        DOCKER_ARCH_ARGS:
+        - --platform linux/arm64/v8 arm64v8/alpine
+        - --platform linux/amd64 amd64/alpine
+        - --platform linux/riscv64 riscv64/alpine:edge
+        - --platform linux/ppc64le ppc64le/alpine
+        - --platform linux/s390x s390x/alpine
       fail-fast: false
     steps:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-
     - name: checkout
       uses: actions/checkout@v4
-
-   #- name: Install requirements
-   #  run : sudo apt update && sudo apt install -y --no-install-recommends docker.io autoconf automake libtool
-
     - name: check kernel
       run: |
         mount | grep binfmt_misc
         docker info
         uname -a
-
     - name: Run in Docker
       run: |
         docker run \
