--- a/.github/workflows/.docker-alpine-asan.yaml
+++ b/.github/workflows/.docker-alpine-asan.yaml
@@ -1,42 +1,41 @@
 name: Alpine address sanitizer
-
-on:
-  push:
+'on':
+  push: null
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+    - main
 env:
   CGO_CFLAGS: -fsanitize=address -fpie -fPIC -fPIE -fno-omit-frame-pointer -g3 -fno-lto
   CGO_LDFLAGS: -Wl,-z,stack-size=0x1F40000
   CC: clang
-
 jobs:
   docker:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        PORTABLE: ["0", "1"]
-        CONTAINER: ["alpine:3.19.1", "alpine:3.19", "alpine:3.18.6",
-                    "alpine:3.18", "alpine:3.17.7", "alpine:3.17"]
+        PORTABLE:
+        - '0'
+        - '1'
+        CONTAINER:
+        - alpine:3.19.1
+        - alpine:3.19
+        - alpine:3.18.6
+        - alpine:3.18
+        - alpine:3.17.7
+        - alpine:3.17
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
-
     - name: Install alpine deps
       run: ./misc/install-alpine-deps.sh
-
     - name: Show go env
       run: go env
-
     - name: Build and test 511 with asan
       run: cd src/ctidh511 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -o asan-test -timeout 0 -asan -v ./...
-
     - name: Build and test 512 with asan
       run: cd src/ctidh512 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -o asan-test -timeout 0 -asan -v ./...
-
     - name: Build and test 1024 with asan
       run: cd src/ctidh1024 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -o asan-test -timeout 0 -asan -v ./...
-
     - name: Build and test 2048 with asan
       run: cd src/ctidh2048 && HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} go test -o asan-test -timeout 0 -asan -v ./...
