--- a/.github/workflows/.docker-debian.yaml
+++ b/.github/workflows/.docker-debian.yaml
@@ -1,39 +1,38 @@
 name: Debian
-
-on:
-  push:
+'on':
+  push: null
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+    - main
 jobs:
   docker:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang", "gcc"]
-        PORTABLE: ["0", "1"]
-        CONTAINER: ["debian:12-slim", "debian:unstable-slim"]
+        CC:
+        - clang
+        - gcc
+        PORTABLE:
+        - '0'
+        - '1'
+        CONTAINER:
+        - debian:12-slim
+        - debian:unstable-slim
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
-
     - name: Install Debian deps
       run: ./misc/install-debian-deps.sh
-
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
     - name: Test install
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
-
     - name: Register libraries
       run: sudo ldconfig /usr/local/lib
-
     - name: Build examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
-
     - name: Run examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
-
     - name: Examine build artifacts
       run: ls -alh dist/*.so && sha256sum dist/*.so
