--- a/.github/workflows/.docker-ubuntu.yaml
+++ b/.github/workflows/.docker-ubuntu.yaml
@@ -1,39 +1,39 @@
 name: Ubuntu
-
-on:
-  push:
+'on':
+  push: null
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+    - main
 jobs:
   docker:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang", "gcc"]
-        PORTABLE: ["0", "1"]
-        CONTAINER: ["ubuntu:22.04", "ubuntu:24.04", "ubuntu:24.10"]
+        CC:
+        - clang
+        - gcc
+        PORTABLE:
+        - '0'
+        - '1'
+        CONTAINER:
+        - ubuntu:22.04
+        - ubuntu:24.04
+        - ubuntu:24.10
       fail-fast: false
     container: ${{ matrix.CONTAINER }}
     steps:
     - uses: actions/checkout@v4
-
     - name: Install Ubuntu deps
       run: ./misc/install-debian-deps.sh
-
     - name: Build
       run: CC=${{ matrix.CC }} CFLAGS="-fno-lto" HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make
     - name: Test install
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make install
-
     - name: Register libraries
       run: sudo ldconfig /usr/local/lib
-
     - name: Build examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples
-
     - name: Run examples
       run: CC=${{ matrix.CC }} HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }} make examples-run
-
     - name: Examine build artifacts
       run: ls -alh dist/*.so && sha256sum dist/*.so
