--- a/.github/workflows/.dragonflybsd-fiat-test.yaml
+++ b/.github/workflows/.dragonflybsd-fiat-test.yaml
@@ -1,25 +1,24 @@
-name: DragonflyBSD fiat build with clang 
-
-on: [push]
-
+name: DragonflyBSD fiat build with clang
+'on':
+- push
 jobs:
   test:
     runs-on: ubuntu-latest
     name: DragonflyBSD clang build of fiat backend
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
-      CC: "/usr/local/bin/clang16"
-      MAKE: "gmake"
-      HIGHCTIDH_PORTABLE: "1"
+      LANG: C
+      LD: /usr/bin/ld
+      CC: /usr/local/bin/clang16
+      MAKE: gmake
+      HIGHCTIDH_PORTABLE: '1'
     steps:
     - uses: actions/checkout@v4
     - name: Test in DragonflyBSD
       id: test
       uses: vmactions/dragonflybsd-vm@v1
       with:
-        release: "6.4.0"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        release: 6.4.0
+        envs: LANG LD CC MAKE HIGHCTIDH_PORTABLE
         usesh: true
         prepare: |
           uname -a
@@ -29,7 +28,6 @@ jobs:
           gmake -v
           /usr/local/bin/clang16 -v
           echo $SHELL
-
         run: |
           HIGHCTIDH_PORTABLE=1 gmake
           HIGHCTIDH_PORTABLE=1 gmake test-quick
