--- a/.github/workflows/.freebsd-fiat-test-non-gnu-make.yaml
+++ b/.github/workflows/.freebsd-fiat-test-non-gnu-make.yaml
@@ -1,25 +1,24 @@
 name: FreeBSD fiat build with clang (non-GNU make)
-
-on: [push]
-
+'on':
+- push
 jobs:
   test:
     runs-on: ubuntu-latest
     name: FreeBSD clang build of fiat backend (non-GNU make)
     env:
-      LANG: "C"
-      LD: "/usr/bin/ld"
-      CC: "clang"
-      MAKE: "make"
-      HIGHCTIDH_PORTABLE: "1"
+      LANG: C
+      LD: /usr/bin/ld
+      CC: clang
+      MAKE: make
+      HIGHCTIDH_PORTABLE: '1'
     steps:
     - uses: actions/checkout@v4
     - name: Test in FreeBSD
       id: test
       uses: vmactions/freebsd-vm@v1
       with:
-        release: "14.0"
-        envs: 'LANG LD CC MAKE HIGHCTIDH_PORTABLE'
+        release: '14.0'
+        envs: LANG LD CC MAKE HIGHCTIDH_PORTABLE
         usesh: true
         prepare: |
           uname -a
@@ -27,7 +26,6 @@ jobs:
           pkg install -y llvm-13
           clang -v
           echo $SHELL
-
         run: |
           HIGHCTIDH_PORTABLE=1 make
           #          HIGHCTIDH_PORTABLE=1 make test-quick
