--- a/.github/workflows/.ubuntu-cross-compile-test.yaml
+++ b/.github/workflows/.ubuntu-cross-compile-test.yaml
@@ -1,24 +1,22 @@
 name: Ubuntu C library cross compile
-
-on:
-  push:
+'on':
+  push: null
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        CC: ["clang", "gcc"]
+        CC:
+        - clang
+        - gcc
     steps:
     - uses: actions/checkout@v4
-
     - name: Display compiler version
       run: ${{ matrix.CC }} -v
-
     - name: Install cross compiler deps
       run: sudo ./misc/install-ubuntu-latest-cross-deps.sh
-
     - name: Build with cross compiler
       run: CFLAGS="-fno-lto" ./misc/test-c-lib-cross-${{ matrix.CC }}.sh
