Update workflows README.md with YS refactoring tips

--- a/.github/workflows/Makefile
+++ b/.github/workflows/Makefile
@@ -19,6 +19,9 @@ default:
 
 update: $(YS) $(YAML-FILES)
 
+env:
+	@echo PATH=$(GIT-BIN):$(PATH)
+
 .%.yaml: %.ys Makefile lib/* bash/*
 	$(YS) -Y $< > $@
 
