For workflows, use ingy/ys:0.1.96 docker container
With `devel=1` use a fast local install.

--- a/.github/workflows/Makefile
+++ b/.github/workflows/Makefile
@@ -4,7 +4,6 @@ ROOT := $(shell pwd)
 YS-VERSION := 0.1.96
 GIT-PREFIX := ../../.git/.local
 GIT-BIN := $(GIT-PREFIX)/bin
-YS := $(GIT-BIN)/ys-$(YS-VERSION)
 
 YAML-FILES := $(wildcard .*.yaml)
 
@@ -17,15 +16,28 @@ endif
 
 default:
 
-update: $(YS) $(YAML-FILES)
-
 env:
 	@echo PATH=$(GIT-BIN):$(PATH)
 
-.%.yaml: %.ys Makefile lib/* bash/*
-	$(YS) -Y $< > $@
+# Using 'make update devel=1` is much faster than 
+ifdef devel
+YS := $(GIT-BIN)/ys-$(YS-VERSION)
+
+update: $(YS) $(YAML-FILES)
 
 $(YS):
 	@echo "Installing ys as '$(YS)'"
 	curl -s https://yamlscript.org/install | \
 	  QUIET=1 BIN=1 VERSION=$(YS-VERSION) PREFIX=$(GIT-PREFIX) bash
+else
+YS := docker run \
+        -v $(ROOT):/work \
+	-w /work \
+	--env YSPATH=lib \
+	ingy/ys:$(YS-VERSION) ys -Y
+
+update: $(YAML-FILES)
+endif
+
+.%.yaml: %.ys Makefile lib/* bash/*
+	$(YS) -Y $< > $@
