Fix CI failures with related enhancements
This change addresses various failures in the CI including:
- fixes Windows builds where `python-wheel` is no longer a valid package
  to install
- updates `fail-fast` to `false` for several CI configs
- fixes `HIGHCTIDH_PORTABLE=0` ubuntu pytest builds
- fixes Solaris `i86pc` build
- fixes FreeBSD build
- fixes golang builds
- fixes Archlinux builds
- fixes and updates OpenBSD builds
- splits `docker-alpine-64bit-multi-arch.yaml`
- splits `docker-alpine-32bit-multi-arch.yaml`
- removes End of Life (EOL) Ubuntu 23.10 from all jobs
- removes other EOL OS such as MacOS-12 jobs
- changes golang cross compile test for arm32v5; it is now using the
  soft float abi (`-mfloat-abi=soft`)
- updates `nix flake` to include `.s` files
- suppresses gcc false positive on Archlinux
- updates `test-c-lib-cross-clang.sh` to set `-D_CLANG_CROSS_FIXUP`

This change also updates functionality:
- removes stdeb cruft; use `make deb`
- python builds now set `-D_PYTHON` to include `.s` files on `x86_64`
- clang may now set `-D_CLANG_CROSS_FIXUP` to include `.s` files on
  `x86_64`
- resolves a long standing setuptool warning
- reformat `setup.py` with black
- updates `autogen` to output `X86_64` assembly as separate `i86pc`
  files
- updates DragonFlyBSD to use `llvm16-16.0.6_11`
- updates FreeBD to use new `llvm13` package name

--- a/.github/workflows/docker-alpine-32bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-32bit-multi-arch.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 jobs:
   multiarch:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         CC: ["clang"]
@@ -14,6 +14,7 @@ jobs:
         DOCKER_ARCH_ARGS: ["--platform linux/arm/v6 arm32v6/alpine",
                            "--platform linux/arm/v7 arm32v7/alpine",
                            "--platform linux/i386 i386/alpine"]
+        ARCH_TARGET: ["alpine-multi-arch", "alpine-multi-arch-python"]
       fail-fast: false
     steps:
     - name: Set up QEMU
@@ -21,10 +22,6 @@ jobs:
 
     - name: checkout
       uses: actions/checkout@v4
-
-    - name: Install requirements
-      run : |
-        sudo apt install -y --no-install-recommends docker
 
     - name: check kernel
       run: |
@@ -44,4 +41,4 @@ jobs:
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
-          -c "./misc/install-alpine-deps.sh && ./misc/docker-gha-fixup.sh && make alpine-multi-arch"
+          -c "./misc/install-alpine-deps.sh && ./misc/docker-gha-fixup.sh && make ${{ matrix.ARCH_TARGET }}"
