--- a/.github/workflows/docker-alpine-64bit-multi-arch.yaml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 jobs:
   multiarch:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         CC: ["clang"]
@@ -16,6 +16,7 @@ jobs:
                       "--platform linux/riscv64 riscv64/alpine:edge",
                       "--platform linux/ppc64le ppc64le/alpine",
                       "--platform linux/s390x s390x/alpine"]
+        ARCH_TARGET: ["alpine-multi-arch", "alpine-multi-arch-python"]
       fail-fast: false
     steps:
     - name: Set up QEMU
@@ -23,10 +24,6 @@ jobs:
 
     - name: checkout
       uses: actions/checkout@v4
-
-    - name: Install requirements
-      run : |
-        sudo apt install -y --no-install-recommends docker
 
     - name: check kernel
       run: |
@@ -45,4 +42,4 @@ jobs:
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
-          -c "./misc/install-alpine-deps.sh && ./misc/docker-gha-fixup.sh && make alpine-multi-arch"
+          -c "./misc/install-alpine-deps.sh && ./misc/docker-gha-fixup.sh && make ${{ matrix.ARCH_TARGET }}"
