--- a/.github/workflows/macos-fiat-test.yaml
+++ b/.github/workflows/macos-fiat-test.yaml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        OS: ["macos-12", "macos-13", "macos-14", "macos-latest"]
+        OS: ["macos-13", "macos-14", "macos-15"]
         CC: ["clang"]
       fail-fast: false
     runs-on: ${{ matrix.OS }}
