--- a/.github/workflows/nix.yaml
+++ b/.github/workflows/nix.yaml
@@ -5,11 +5,15 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
+      #- uses: DeterminateSystems/flakehub-cache-action@main
       - run: nix flake check
