--- a/.github/workflows/ubuntu-cross-compile-test.yaml
+++ b/.github/workflows/ubuntu-cross-compile-test.yaml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         CC: ["clang", "gcc"]
+      fail-fast: false
     steps:
     - uses: actions/checkout@v4
 
